@@ -6,6 +6,8 @@ ChangeLog
     * better Event repr
     * estimated_to_seconds do not need seconds
     * FILE_CHANGED event sends free_space
+    * Fix metadata parsing being slow (works for supported files)
+    * Metadata parsing is not loading the whole gcode file into RAM anymore
 
 0.3.0 (2021-03-22)
     * fix update file structure
